# CompositeRender

./: .gitignore  CMakeLists.txt  README.md
build.em/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
scripts/: ex.c  ex.cp312-win_amd64.pyd  ex.pyx  scr.py  setup.py  tf_to_onnx.py
src/: globals.h  main.cpp
src/AI/: AI.cpp  AI.h
src/Color/: Color.cpp  Color.h
src/Input/: Input.cpp  Input.h
src/Node/: Node.cpp  Node.h
src/Output/: Output.cpp  Output.h
src/Utils/: utils.cpp  utils.h
src/Vec3/: Vec3.cpp  Vec3.h
